fix materialize icons and animate.css file path

--- a/css/cihan.css
+++ b/css/cihan.css
@@ -1,7 +1,7 @@
 /* ---------------------------------------------------------------------------------------------------------------------------
  * Import Styles
  * --------------------------------------------------------------------------------------------------------------------------- */
-@import url(vendor/_animate.css);
+@import url(/css/vendor/_animate.css);
 /* ---------------------------------------------------------------------------------------------------------------------------
  * Variables
  * --------------------------------------------------------------------------------------------------------------------------- */
