--- a/css/cihan.css
+++ b/css/cihan.css
@@ -75,9 +75,6 @@ em {
 .fa {
   color: #d01614; }
 
-.parallax-container {
-  height: 400px; }
-
 /* ---------------------------------------------------------------------------------------------------------------------------
  *   button
  * --------------------------------------------------------------------------------------------------------------------------- */
@@ -134,6 +131,9 @@ a.hamburger-icon {
   padding-left: 25px;
   padding-bottom: 25px; }
 
+#sidenav-overlay {
+  background: none; }
+
 /* ---------------------------------------------------------------------------------------------------------------------------
  * Header
  * --------------------------------------------------------------------------------------------------------------------------- */
@@ -153,6 +153,21 @@ nav {
       background-color: #b91412; }
   #nav-mobile a.active {
     background-color: #b91412; }
+
+/* ---------------------------------------------------------------------------------------------------------------------------
+ * parallax
+ * --------------------------------------------------------------------------------------------------------------------------- */
+.parallax-container {
+  height: 400px; }
+
+@media screen and (max-width: 1000px) {
+  .no-parallax {
+    height: 300px; } }
+@media screen and (max-width: 600px) {
+  .no-parallax {
+    height: 200px; } }
+.no-parallax img {
+  width: 100%; }
 
 /* ---------------------------------------------------------------------------------------------------------------------------
  * home
@@ -291,3 +306,13 @@ a.mobile-logo {
   text-decoration: none; }
   a.mobile-logo:hover {
     color: #FFFFF; }
+
+#screen-size-check {
+  float: left; }
+  @media screen and (min-width: 1001px) {
+    #screen-size-check {
+      float: none; } }
+
+@media screen and (min-width: 1001px) {
+  .no-parallax {
+    display: none; } }
