fix: no-parallax

--- a/css/cihan.css
+++ b/css/cihan.css
@@ -167,7 +167,8 @@ nav {
   .no-parallax {
     height: 200px; } }
 .no-parallax img {
-  width: 100%; }
+  height: 100%;
+  width: 140%; }
 
 /* ---------------------------------------------------------------------------------------------------------------------------
  * home
