--- a/css/cihan.css
+++ b/css/cihan.css
@@ -69,11 +69,13 @@ a {
 em {
   color: #000000;
   font-weight: bold;
-  font-family: "Abril Fatface", cursive;
   font-style: normal; }
 
 .fa {
   color: #d01614; }
+
+p {
+  margin-top: 30px; }
 
 /* ---------------------------------------------------------------------------------------------------------------------------
  *   button
@@ -200,10 +202,8 @@ nav {
     @media screen and (max-width: 600px) {
       #projects .project-header {
         margin-top: 30px; } }
-  #projects p {
-    margin-top: 60px;
-    margin-bottom: 90px; }
   #projects .project-button {
+    margin-top: 30px;
     margin-bottom: 60px; }
 
 /* ---------------------------------------------------------------------------------------------------------------------------
@@ -222,15 +222,13 @@ nav {
   #skills li {
     display: inline;
     padding-left: 15px; }
-  #skills p {
-    margin-top: 60px; }
   #skills .coding-skills, #skills .design-skills {
     margin-bottom: 30px; }
 
 /* ---------------------------------------------------------------------------------------------------------------------------
  * about
  * --------------------------------------------------------------------------------------------------------------------------- */
-#about p, #about h5 {
+#about h5 {
   margin: 0;
   padding: 0; }
 #about h5 {
@@ -250,10 +248,15 @@ nav {
   font-weight: bold; }
 #about .experience {
   margin-bottom: 30px; }
+  #about .experience p {
+    margin: 0; }
 #about .education {
   margin-bottom: 30px; }
+  #about .education p {
+    margin: 0; }
+#about .language p {
+  margin: 0; }
 #about .about-me {
-  margin-top: 90px;
   margin-bottom: 90px;
   text-align: center; }
 #about span {
@@ -266,6 +269,8 @@ nav {
   text-align: center;
   width: 100%;
   margin-bottom: 60px; }
+#about .testimonials .testimonial-content p {
+  margin: 0; }
 #about .testimonials .testimonial-content::before {
   content: url("../images/open-quote.png"); }
 #about .testimonials .testimonial-content::after {
